--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "@babel/preset-react": "^7.18.6",
-    "@testing-library/dom": "^9.2.0"
+    "@testing-library/dom": "^9.2.0",
+    "enzyme": "^3.11.0"
   }
 }
