--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://wavesinaroom.github.io/my-odin-project-shopping-cart/#",
+  "homepage": "https://wavesinaroom.github.io/",
   "name": "shopping-cart",
   "version": "0.1.0",
   "private": true,
