[Fix] Change repo url to the way it actually is on github

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://wavesinaroom.github.io/",
+  "homepage": "https://wavesinaroom.github.io/my_odin_project_shopping_cart",
   "name": "shopping-cart",
   "version": "0.1.0",
   "private": true,
